--- a/_posts/2019-06-05-hello-gyx.md
+++ b/_posts/2019-06-05-hello-gyx.md
@@ -4,7 +4,7 @@ title: 'Hello Jekyll'
 date: 2019-06-5
 author: gyx
 color: rgb(255,210,32)
-cover: 'http://on2171g4d.bkt.clouddn.com/jekyll-banner.png'
+cover: '../assets/profile.jpeg'
 tags: blog
 ---
 
