--- a/_posts/2019-06-05-hello-gyx.md
+++ b/_posts/2019-06-05-hello-gyx.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 'Hello Jekyll'
+title: 'Hello gyx'
 date: 2019-06-5
 author: gyx
 color: rgb(255,210,32)
-cover: '../assets/profile.jpeg'
+cover: '../assets/IMG.jpeg'
 tags: blog
 ---
 
